@@ -1,3 +1,8 @@
+15 May 2003 mipsator
+ * cleanup in various files (XXX comments).
+ * added missing check (XXX comments).
+ * misc.
+
 14 May 2003 mipsator
  * moved functab and misc related.
  * use hash_add_array() in hash_test.
